# tzif-parser

./: AGENTS.md  LICENSE  README.md  setup.cfg
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml
tests/: test_posix.py  test_tzif.py  test_tzif_perf.py
tzif_parser/: __init__.py  __main__.py  dst_transition.py  models.py  parser.py  posix.py  ttinfo.py  tz_transition.py  tzif.py  tzif_body.py  tzif_header.py
zoneinfo_shim/: _tzpath.py  zoneinfo.py
