[metadata]
name = tzif-parser
version = 0.0.16
author = Mason Flint
author_email = masonflint44@gmail.com
description = Easily parse Time Zone Information Format (TZif) files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MasonFlint44/tzif-parser
project_urls =
    Bug Tracker = https://github.com/MasonFlint44/tzif-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.10
install_requires =

[options.packages.find]
exclude =
    zoneinfo_shim*
    tests*